--- a/.github/workflows/S905X Final.yml
+++ b/.github/workflows/S905X Final.yml
@@ -122,19 +122,19 @@ jobs:
         sudo cp -av mnt/armbian_boot/uEnv.txt mnt/haos_boot/uEnv.txt 2>/dev/null || true
 
         # ensure uEnv contains console for Amlogic and doesn't clobber existing root= if present
-        UENV="mnt/haos_boot/uEnv.txt"
-        if [ -f "$UENV" ]; then
-          sudo cp -a "$UENV" "${UENV}.bak_from_action" || true
-          if sudo grep -q '^bootargs=' "$UENV"; then
-            if ! sudo grep -q 'ttyAML0' "$UENV"; then
-              sudo sed -i "s/^bootargs=.*/& console=ttyAML0,115200n8 console=tty0 no_console_suspend/" "$UENV" || true
-            fi
-          else
-            echo 'bootargs=console=ttyAML0,115200n8 console=tty0 no_console_suspend' | sudo tee -a "$UENV"
-          fi
-        else
-          echo 'bootargs=console=ttyAML0,115200n8 console=tty0 no_console_suspend' | sudo tee "$UENV"
-        fi
+        ##UENV="mnt/haos_boot/uEnv.txt"
+        #if [ -f "$UENV" ]; then
+         # sudo cp -a "$UENV" "${UENV}.bak_from_action" || true
+          #if sudo grep -q '^bootargs=' "$UENV"; then
+           # if ! sudo grep -q 'ttyAML0' "$UENV"; then
+            #  sudo sed -i "s/^bootargs=.*/& console=ttyAML0,115200n8 console=tty0 no_console_suspend/" "$UENV" || true
+            #fi
+          #else
+           # echo 'bootargs=console=ttyAML0,115200n8 console=tty0 no_console_suspend' | sudo tee -a "$UENV"
+          #fi
+        #else
+         # echo 'bootargs=console=ttyAML0,115200n8 console=tty0 no_console_suspend' | sudo tee "$UENV"
+        #fi
 
     - name: Merge firmware & modules (best-effort)
       run: |
